# VRCTrace

./: LICENSE.md  README.md  package.json
Runtime/: MetaTexture.cs  ProbeBufferGenerator.cs  VRCTraceManager.asset  VRCTraceManager.cs  com.z3y.vrctrace.runtime.asmdef  com.z3y.vrctrace.runtime.asset
Runtime/BVH/: BVH.cs  MeshInfo.cs  Model.cs  RayTracingMaterial.cs  Triangle.cs
Runtime/Lightmap/: VRCTraceGI.asset  VRCTraceGI.cs  VRCTraceLightmapBaker.asset  VRCTraceLightmapBaker.cs
Runtime/Shaders/: Copy Light Volume.shader  Debug View Color.mat  Debug View N.mat  Debug View Ng.mat  Debug View P.mat  Debug View UV.mat  Debug View.shader  Lightmap View.shader  Trace Lightprobe.shader  VRCTrace AO.shader  VRCTrace Camera.shader  VRCTrace Combine.shader  VRCTrace Light Probe.shader  VRCTrace Lightmap.shader  VRCTrace.hlsl
Runtime/tinybvh/: TinyBVH.cs
Runtime/tinybvh/src~/: CMakeLists.txt  tinybvh_unity.cpp
